[package]
name = "hycon_rust"
version = "0.1.0"
authors = ["Niall Moore<niall@hycon.io>, Josiah Evans <koreanhalo@gmail.com>, HYCON Team <support@hycon.io>"]
edition = "2018"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
links = "secp256k1"

[build-dependencies]
protoc = "^2.0.4"
protoc-rust-no-elision = "^2.0.4"
protobuf-codegen-no-elision = "^2.0.4"

[dependencies]
blake2-rfc = "0.2.18"
byteorder="1.3.1"
bytes = "^0.4"
cryptonight-rs = "^0.2"
futures = "^0.1.25"
openssl = {version = "0.10.11", features = ["vendored"]}
protobuf = "^2.0.4"
rand="^0.6"
serde_json = "1.0.26"
serde_derive = "1.0.72"
serde = "1.0.72"
slog = "^2.4.1"
slog-term = "2.4.0"
tokio = "^0.1.15"
tokio-io="^0.1"
tokio-proto="^0.1"
secp256k1 = "0.11.6"
rocksdb = "0.11.0"
rust-base58 = "0.0.4"
hex = "0.3.2"
tiny-keccak = "1.4.2"
lazy_static = "1.1.0"
starling = "1.2.1"
uuid = {version = "0.6.5", features= ["v4"]}
double = "0.2.2"
wallet = { git = "https://github.com/jimni1222/rust_wallet.git" }
bitcoin = "0.14.2"

[dev-dependencies]
criterion = "^0.2.10"
double = "0.2.3"

[[bench]]
name = "common_benches"
harness = false

[[bench]]
name = "proto_benches"
harness = false

[[bench]]
name = "wordstate_benches"
harness = false

# [[bench]]
# name = "util_benches"
# harness = false

include = [
    "/src/**/*.rs",
    "/benches/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/mnemonic/*.json",
    "/data/*.dat"
]

[lib]
doctest = false

